# wayle

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  justfile  result  rust-toolchain.toml  wayle_button_styling_map.html
crates/wayle-auth/: Cargo.toml
crates/wayle-auth/src/: greetd_backend.rs  lib.rs  pam_backend.rs
crates/wayle-bar-apps/: Cargo.toml  i18n.toml
crates/wayle-bar-apps/src/: lib.rs
crates/wayle-bar-apps/src/dropdowns/: mod.rs
crates/wayle-bar-apps/src/dropdowns/notification/: factory.rs  helpers.rs  messages.rs  methods.rs  mod.rs  watchers.rs
crates/wayle-bar-apps/src/dropdowns/treeman/: actions.rs  factory.rs  messages.rs  mod.rs  watchers.rs
crates/wayle-bar-apps/src/modules/: mod.rs
crates/wayle-bar-apps/src/modules/notification/: factory.rs  helpers.rs  messages.rs  methods.rs  mod.rs  watchers.rs
crates/wayle-bar-apps/src/modules/systray/: factory.rs  helpers.rs  messages.rs  methods.rs  mod.rs  styling.rs  watchers.rs
crates/wayle-bar-apps/src/modules/treeman/: factory.rs  helpers.rs  messages.rs  mod.rs  watchers.rs
crates/wayle-bar-hardware/: Cargo.toml  i18n.toml
crates/wayle-bar-hardware/src/: lib.rs
crates/wayle-bar-hardware/src/dropdowns/: mod.rs
crates/wayle-bar-hardware/src/dropdowns/battery/: factory.rs  messages.rs  mod.rs  watchers.rs
crates/wayle-bar-hardware/src/dropdowns/brightness/: factory.rs  helpers.rs  messages.rs  methods.rs  mod.rs  watchers.rs
crates/wayle-bar-hardware/src/modules/: mod.rs
crates/wayle-bar-info/: Cargo.toml  i18n.toml
crates/wayle-bar-info/src/: lib.rs
crates/wayle-bar-info/src/dropdowns/: mod.rs
crates/wayle-bar-info/src/modules/: mod.rs
crates/wayle-bar-media/: Cargo.toml  i18n.toml
crates/wayle-bar-media/src/: lib.rs
crates/wayle-bar-media/src/dropdowns/: mod.rs
crates/wayle-bar-media/src/modules/: mod.rs
crates/wayle-bar-network/: Cargo.toml  i18n.toml
crates/wayle-bar-network/src/: lib.rs
crates/wayle-bar-network/src/dropdowns/: mod.rs
crates/wayle-bar-network/src/modules/: mod.rs
crates/wayle-bar-workspaces/: Cargo.toml  i18n.toml
crates/wayle-bar-workspaces/src/: lib.rs
crates/wayle-bar-workspaces/src/dropdowns/: mod.rs
crates/wayle-bar-workspaces/src/modules/: mod.rs
crates/wayle-brightness/: CHANGELOG.md  Cargo.toml  README.md
crates/wayle-brightness/src/: builder.rs  error.rs  lib.rs  monitoring.rs  service.rs
crates/wayle-brightness/src/backend/: ddc.rs  hotplug.rs  logind.rs  mod.rs  types.rs
crates/wayle-brightness/src/core/: mod.rs
crates/wayle-brightness/src/types/: backlight.rs  mod.rs
crates/wayle-config/: Cargo.toml
crates/wayle-config/src/: click_action.rs  lib.rs
crates/wayle-config/src/infrastructure/: error.rs  paths.rs  service.rs  watcher.rs
crates/wayle-config/src/property/: config.rs
crates/wayle-config/tests/: deprecated_alias.rs
crates/wayle-greeter/: Cargo.toml
crates/wayle-greeter/locales/en-US/: wayle-greeter.ftl
crates/wayle-greeter/locales/fr/: wayle-greeter.ftl
crates/wayle-greeter/src/: app.rs  apply.rs  config.rs  cursor.rs  i18n.rs  main.rs  session.rs  users.rs
crates/wayle-ipc/: Cargo.toml
crates/wayle-ipc/src/: file_chooser.rs  launcher_socket.rs  lib.rs  portal_dialogs.rs  print.rs  recorder.rs  screenshot.rs  share_picker.rs  shell_ipc.rs  widget_socket.rs
crates/wayle-launcher/: Cargo.toml
crates/wayle-launcher/src/: error.rs  history.rs  item.rs  keybinds.rs  lib.rs  matcher.rs  mode.rs  session.rs  spawn.rs  template.rs
crates/wayle-launcher/src/modes/: combi.rs  dmenu.rs  drun.rs  filebrowser.rs  keys.rs  mod.rs  run.rs  script.rs  ssh.rs  window.rs
crates/wayle-portal/: Cargo.toml
crates/wayle-portal/src/: access.rs  account.rs  appchooser.rs  background.rs  dbus_util.rs  dynamiclauncher.rs  email.rs  error.rs  filechooser.rs  inhibit.rs  inputcapture.rs  lib.rs  lockdown.rs  manifest.rs  notification.rs  print.rs  protocol.rs  request.rs  response.rs  screenshot.rs  secret.rs  session.rs  settings.rs  usb.rs  wallpaper.rs
crates/wayle-portal/src/clipboard/: manager.rs  mod.rs
crates/wayle-portal/src/globalshortcuts/: manager.rs  mod.rs
crates/wayle-portal/src/remotedesktop/: eis.rs  input.rs  mod.rs
crates/wayle-portal/src/screencast/: capture.rs  mod.rs  pipewire.rs  restore.rs  source.rs
crates/wayle-recorder/: Cargo.toml
crates/wayle-recorder/examples/: portal_probe.rs
crates/wayle-recorder/src/: lib.rs  options.rs  pipeline.rs  portal.rs
crates/wayle-share-preview/: Cargo.toml
crates/wayle-share-preview/src/: buffer.rs  dmabuf.rs  error.rs  ext_capture.rs  ext_output.rs  frame.rs  image.rs  lib.rs  output.rs  toplevel.rs
crates/wayle-share-preview/src/protocols/: hyprland_toplevel_export_v1.rs  mod.rs
crates/wayle-shell-core/: Cargo.toml  build.rs
crates/wayle-shell-core/locales/en-US/: _bar.ftl  _lock.ftl  _notification_dropdown.ftl  _notification_popup.ftl  _weather.ftl  wayle-shell-core.ftl
crates/wayle-shell-core/locales/fr/: _bar.ftl  _lock.ftl  _osd.ftl  wayle-shell-core.ftl
crates/wayle-shell-core/src/: glob.rs  i18n.rs  lib.rs  notification_icons.rs  process.rs  shell_services.rs  template.rs
crates/wayle-shell-core/src/bar/: compositor.rs  dropdown_registry.rs  icons.rs  mod.rs  module_registry.rs
crates/wayle-shell-core/src/helpers/: layer_shell.rs  mod.rs  monitors.rs
crates/wayle-shell-core/src/services/: mod.rs  widget_ipc.rs
crates/wayle-treeman/: Cargo.toml
crates/wayle-treeman/src/: error.rs  lib.rs  model.rs  service.rs  socket.rs
wayle/: Cargo.toml
wayle/src/: main.rs
wayle/src/cli/: app.rs  lock.rs  mod.rs  share_picker.rs  toast.rs
wayle/src/cli/launcher/: args.rs  client.rs  mod.rs
wayle/src/cli/panel/: settings.rs
wayle/src/cli/portal/: backend.rs  commands.rs  mod.rs  share_picker.rs  show.rs
wayle/src/cli/recorder/: commands.rs  mod.rs  pause.rs  proxy.rs  resume.rs  start.rs  status.rs  stop.rs  toggle.rs
wayle/src/cli/screenshot/: commands.rs  mod.rs  proxy.rs
wayle/src/cli/widget/: commands.rs  mod.rs  update.rs
wayle/src/docs/: index_page.rs
(+1117 files in other folders)
