[workspace]
resolver = "2"
members = [
	"crates/wayle-auth",
	"crates/wayle-config",
	"crates/wayle-derive",
	"crates/wayle-greeter",
	"crates/wayle-i18n",
	"crates/wayle-icons",
	"crates/wayle-idle-inhibit",
	"crates/wayle-ipc",
	"crates/wayle-recorder",
	"crates/wayle-settings",
	"crates/wayle-share-preview",
	"crates/wayle-shell",
	"crates/wayle-styling",
	"crates/wayle-widgets",
	# Service crates, folded in from the former wayle-services repo.
	"crates/wayle-audio",
	"crates/wayle-battery",
	"crates/wayle-bluetooth",
	"crates/wayle-brightness",
	"crates/wayle-cava",
	"crates/wayle-core",
	"crates/wayle-hyprland",
	"crates/wayle-mango",
	"crates/wayle-media",
	"crates/wayle-network",
	"crates/wayle-niri",
	"crates/wayle-notification",
	"crates/wayle-portal",
	"crates/wayle-power-profiles",
	"crates/wayle-sway",
	"crates/wayle-sysinfo",
	"crates/wayle-systray",
	"crates/wayle-traits",
	"crates/wayle-wallpaper",
	"crates/wayle-weather",
	"wayle",
]
exclude = ["sandbox"]

[workspace.package]
version = "0.8.12"
edition = "2024"
rust-version = "1.93"
repository = "https://github.com/stubbedev/wayle"
license = "MIT"

[workspace.dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
bitflags = "2.9.4"
bytesize = "2"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.48", features = ["color", "derive"] }
console = "0.16"
derive_more = { version = "2.0.1", default-features = false, features = [
	"debug",
] }
dotenvy = "0.15"
fnv = "1.0"
futures = "0.3.31"
gdk-pixbuf = "0.22"
gdk4 = "0.11"
glib = "0.22"
glob = "0.3.2"
grass = "0.13.4"
gstreamer = "0.25"
ashpd = { version = "0.13", default-features = false, features = [
	"tokio",
	"screencast",
] }
gtk4 = { version = "0.11", features = ["v4_12"] }
gtk4-layer-shell = "0.8"
gtk4-session-lock = { version = "0.4", features = ["v1_1"] }
zeroize = "1"
i18n-embed = { version = "0.16", features = [
	"desktop-requester",
	"fluent-system",
] }
i18n-embed-fl = "0.10"
indicatif = "0.18"
inventory = "0.3"
libc = "0.2.176"
libpulse-binding = { version = "2.30.1", features = ["pa_v13"] }
niri-ipc = "=25.11.0"
pipewire = "0.10"
# `v0_3_62` gates `MetaVideoTransform` (confirmed in
# libspa-0.10.0/src/buffer/meta.rs: `#[cfg(feature = "v0_3_62")] MetaVideoTransform`).
libspa = { version = "0.10", features = ["v0_3_62"] }
# dmabuf zero-copy capture path (best-effort, SHM fallback). `gbm` allocates the
# DRM buffer object; `drm-fourcc` provides the DRM fourcc / modifier types gbm's
# Format/Modifier enums are built from.
gbm = "0.18"
drm-fourcc = "2.2"
minijinja = { version = "2.15", default-features = false, features = [
	"builtins",
	"serde",
] }
mime2ext = "0.1"
notify = "8"
# pam 0.7 pins pam-sys 0.5 which ships prebuilt bindings (no bindgen/libclang
# at build time, unlike 0.8's pam-sys 1.0-alpha).
pam = "0.7"
palette = "0.7"
png = "0.18"
rand = "0.9.2"
relm4 = { version = "0.11", features = ["macros"] }
reqwest = { version = "0.13", default-features = false, features = [
	"charset",
	"json",
	"query",
	"rustls",
] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rust-embed = "8"
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_json_path = "0.7"
serde_yaml = "0.9"
smithay-client-toolkit = "0.20"
sourceview5 = "0.11"
sysinfo = { version = "0.33", default-features = false, features = [
	"component",
	"disk",
	"network",
	"system",
	"user",
] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.16"
toml = { version = "1.1", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-attributes = "0.1.30"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
unic-langid = "0.9"
wildcard = "0.3"
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }
hyprland = "0.4.0-beta.2"
regex = "1.12"
shlex = "2.0"
wayland-client = "0.31.14"

# Service crates, folded in from the former wayle-services repo as path members.
wayle-audio = { path = "crates/wayle-audio" }
wayle-battery = { path = "crates/wayle-battery" }
wayle-bluetooth = { path = "crates/wayle-bluetooth" }
wayle-brightness = { path = "crates/wayle-brightness" }
wayle-cava = { path = "crates/wayle-cava", features = ["vendored"] }
wayle-core = { path = "crates/wayle-core" }
wayle-hyprland = { path = "crates/wayle-hyprland" }
wayle-mango = { path = "crates/wayle-mango" }
wayle-niri = { path = "crates/wayle-niri" }
wayle-sway = { path = "crates/wayle-sway" }
wayle-media = { path = "crates/wayle-media" }
wayle-network = { path = "crates/wayle-network" }
wayle-notification = { path = "crates/wayle-notification" }
wayle-portal = { path = "crates/wayle-portal" }
wayle-power-profiles = { path = "crates/wayle-power-profiles" }
wayle-sysinfo = { path = "crates/wayle-sysinfo" }
wayle-systray = { path = "crates/wayle-systray" }
wayle-traits = { path = "crates/wayle-traits" }
wayle-wallpaper = { path = "crates/wayle-wallpaper" }
wayle-weather = { path = "crates/wayle-weather" }

wayle-auth = { path = "crates/wayle-auth" }
wayle-config = { path = "crates/wayle-config" }
wayle-derive = { path = "crates/wayle-derive" }
wayle-i18n = { path = "crates/wayle-i18n" }
wayle-icons = { path = "crates/wayle-icons" }
wayle-idle-inhibit = { path = "crates/wayle-idle-inhibit" }
wayle-ipc = { path = "crates/wayle-ipc" }
wayle-recorder = { path = "crates/wayle-recorder" }
wayle-share-preview = { path = "crates/wayle-share-preview" }
wayle-shell = { path = "crates/wayle-shell" }
wayle-styling = { path = "crates/wayle-styling" }
wayle-widgets = { path = "crates/wayle-widgets" }

[workspace.lints.clippy]
cognitive_complexity = "warn"
expect_used = "deny"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_ok_or = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "allow"
panic = "warn"
similar_names = "allow"
too_many_lines = "warn"
unwrap_used = "deny"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

# Thin LTO + parallel codegen: ~2-4x faster link than fat LTO / 1 unit, with
# negligible runtime cost for a GTK app. Used by `just build` and every CI
# `cargo build --release` (per-PR build, packaging, release artifacts).
[profile.release]
lto = "thin"
codegen-units = 16
