[package]
name = "wayle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Wayland services CLI"
repository.workspace = true
license.workspace = true
default-run = "wayle"

[[bin]]
name = "wayle"
path = "src/main.rs"

# Thin single-token alias for `wayle lock`, for exec contexts that don't
# shell-split (systemd ExecStart, idle daemons, compositor spawn).
[[bin]]
name = "wayle-lock"
path = "src/bin/wayle-lock.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
clap_complete = "4"
console.workspace = true
futures.workspace = true
gdk4.workspace = true
gtk4.workspace = true
gtk4-layer-shell.workspace = true
indicatif.workspace = true
notify.workspace = true
relm4.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
# Service dependencies
wayle-audio.workspace = true
wayle-battery.workspace = true
wayle-bluetooth.workspace = true
wayle-cava.workspace = true
# Common dependencies
wayle-core = { workspace = true, features = ["schema"] }
wayle-ipc.workspace = true
wayle-config = { workspace = true, features = ["schema"] }
wayle-hyprland.workspace = true
wayle-icons.workspace = true
wayle-launcher.workspace = true
wayle-media.workspace = true
wayle-network.workspace = true
wayle-notification.workspace = true
wayle-portal.workspace = true
wayle-power-profiles.workspace = true
wayle-styling.workspace = true
wayle-systray.workspace = true
wayle-wallpaper.workspace = true
wayle-shell.workspace = true
wayle-widgets.workspace = true
zbus.workspace = true

[lints]
workspace = true
