[package]
name = "wayle-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Wayle authentication - backend-agnostic PAM/greetd conversation"
repository.workspace = true
license.workspace = true

[dependencies]
pam.workspace = true
zeroize.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
