[package]
name = "wayle-bar-hardware"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Wayle bar modules: hardware"
repository.workspace = true
license.workspace = true

[dependencies]
bytesize.workspace = true
glib.workspace = true
gtk4.workspace = true
futures.workspace = true
i18n-embed-fl.workspace = true
relm4.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wayle-battery.workspace = true
wayle-brightness.workspace = true
wayle-config.workspace = true
wayle-core.workspace = true
wayle-idle-inhibit.workspace = true
wayle-power-profiles.workspace = true
wayle-shell-core.workspace = true
wayle-sysinfo.workspace = true
wayle-widgets.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
