[package]
name = "wayle-bar-info"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Wayle bar modules: info"
repository.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
futures.workspace = true
glib.workspace = true
gtk4.workspace = true
i18n-embed-fl.workspace = true
relm4.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wayle-audio.workspace = true
wayle-battery.workspace = true
wayle-bluetooth.workspace = true
wayle-config.workspace = true
wayle-core.workspace = true
wayle-media.workspace = true
wayle-network.workspace = true
wayle-notification.workspace = true
wayle-power-profiles.workspace = true
wayle-shell-core.workspace = true
wayle-sysinfo.workspace = true
wayle-weather.workspace = true
wayle-widgets.workspace = true
notify.workspace = true

[lints]
workspace = true
