[package]
name = "wayle-bar-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Wayle bar modules: media"
repository.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
gdk4.workspace = true
glib.workspace = true
gtk4.workspace = true
gio-unix = { version = "0.22.6", default-features = false }
i18n-embed-fl.workspace = true
libc.workspace = true
relm4.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
wayle-audio.workspace = true
wayle-cava.workspace = true
wayle-config.workspace = true
wayle-media.workspace = true
wayle-shell-core.workspace = true
wayle-styling.workspace = true
wayle-wallpaper.workspace = true
wayle-widgets.workspace = true

[lints]
workspace = true
