[package]
name = "wayle-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Configuration management for Wayle"
repository.workspace = true
license.workspace = true

[dependencies]
dotenvy.workspace = true
futures.workspace = true
glob.workspace = true
inventory = { workspace = true, optional = true }
notify.workspace = true
owo-colors = "4.2.3"
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_json_path.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
wayle-core.workspace = true
wayle-derive.workspace = true

[features]
default = []
# JSON-schema generation + docs registry. Only the `wayle` binary needs this
# (`wayle config schema`, docs generator); leaving it off keeps schemars and
# its derive expansion out of every other crate's build of wayle-config.
schema = ["dep:schemars", "dep:inventory", "wayle-core/schema"]

[dev-dependencies]
tracing-subscriber.workspace = true

[lints]
workspace = true
