[package]
name = "wayle-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "D-Bus interface definitions for Wayle CLI and shell communication"
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
zbus.workspace = true

[lints]
workspace = true
