[package]
name = "wayle-portal"
description = "xdg-desktop-portal backend (org.freedesktop.impl.portal.*) for the Wayle shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
# `pipewire` gates the ScreenCast PipeWire producer, the only part that needs
# the libpipewire/libspa C libraries. Everything else (D-Bus interfaces,
# wlr/ext Wayland capture, all pure logic) builds without it, so
# `cargo test -p wayle-portal --no-default-features` runs the unit tests with
# no system PipeWire present.
default = ["pipewire"]
pipewire = ["dep:pipewire", "dep:libspa"]

[dependencies]
futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zbus.workspace = true
wayland-client.workspace = true
wayle-config.workspace = true
wayle-ipc.workspace = true
wayle-share-preview.workspace = true
pipewire = { workspace = true, optional = true }
libspa = { workspace = true, optional = true }

[lints.clippy]
cognitive_complexity = "warn"
expect_used = "deny"
inefficient_to_string = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"
unused_self = "warn"

[lints.rust]
missing_docs = "warn"
unsafe_code = "allow"
